test/files/neg/t4581/static-declaration_1.scala





object Constants {
  import scala.annotation.static
  @static val Const: Int = 0 // should generate a static final field
  @static final val FinalConst: Int = 0 // ditto
  @static var MutableField: Int = 0 // should not be final
}



